apps/loki/post-install/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: loki
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`loki.local.asztalos.net`) && PathPrefix(`/loki/api`)
      priority: 20
      services:
        - name: loki
          namespace: loki
          port: 3100
    - kind: Rule
      match: Host(`loki.local.asztalos.net`)
      priority: 10
      middlewares:
        - name: authentik
          namespace: traefik
        - name: default-headers
          namespace: traefik
      services:
        - name: loki
          namespace: loki
          port: 3100
  tls:
    secretName: local-asztalos-net-tls
